# WorldOfTaxonomy

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  DESIGN.md  Dockerfile.backend  HANDOVER.md  LICENSE  MANIFEST.in  OAUTH_PRODUCTION_SETUP.md  README.md  ROADMAP.md  SECURITY.md  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements.txt  run_mcp.sh  setup.py
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
blog/: 249-countries-one-taxonomy-profile.md  BLOG_GUIDELINES.md  _meta.json  contributing-a-new-system.md  give-your-ai-agent-every-taxonomy.md  how-national-industry-codes-diverge.md  introducing-worldoftaxonomy.md  life-sciences-classification.md  mapping-occupations-across-borders.md  medical-coding-made-navigable.md  self-host-in-two-minutes.md  trade-classification-global-commerce.md  translating-naics-to-nace-one-api-call.md  why-classification-systems-are-broken.md
crosswalk-data/: all-sections.json  pair__anzsco_2022___anzsic_2006.json  pair__ateco_2007___nace_rev2.json  pair__bsic___isic_rev4.json  pair__cae_rev3___nace_rev2.json  pair__caeb___isic_rev4.json  pair__caem_md___nace_rev2.json  pair__caen_rev2___nace_rev2.json  pair__cfr_title_49___naics_2022.json  pair__ciiu_ar___isic_rev4.json  pair__ciiu_cl___isic_rev4.json  pair__ciiu_co___isic_rev4.json  pair__ciiu_cr___isic_rev4.json  pair__ciiu_do___isic_rev4.json  pair__ciiu_ec___isic_rev4.json  pair__ciiu_gt___isic_rev4.json  pair__ciiu_pa___isic_rev4.json  pair__ciiu_pe___isic_rev4.json  pair__ciiu_py___isic_rev4.json  pair__ciiu_uy___isic_rev4.json  pair__ciiu_ve___isic_rev4.json  pair__cip_2020___iscedf_2013.json  pair__cip_2020___soc_2018.json  pair__cnae_2009___nace_rev2.json  pair__cnae_2012___isic_rev4.json  pair__cpc_v21___hs_2022.json  pair__cpc_v21___isic_rev4.json  pair__csic_2017___isic_rev4.json  pair__cz_nace___nace_rev2.json  pair__db07___nace_rev2.json  pair__domain_ag_crop___naics_2022.json  pair__domain_ag_grade___naics_2022.json  pair__domain_ag_livestock___naics_2022.json  pair__domain_ag_method___naics_2022.json  pair__domain_const_building___naics_2022.json  pair__domain_const_trade___naics_2022.json  pair__domain_mining_method___naics_2022.json  pair__domain_mining_mineral___naics_2022.json  pair__domain_mining_reserve___naics_2022.json  pair__domain_truck_cargo___fmcsa_regs.json  (+180 more)
data/: README.md  anzsco_2022.xml
docs/: adding-a-new-system.md  logo-design-brief.md
frontend/: Dockerfile.prod  next.config.ts  package-lock.json  package.json
migrations/: env.py
scripts/: audit_abandoned_keys.py  backfill_anzsco_descriptions.py  backfill_anzsic2006_descriptions.py  backfill_anzsic_2006_descriptions.py  backfill_anzsic_cascade.py  backfill_atc_who_descriptions.py  backfill_cip_2020_descriptions.py  backfill_cofog_descriptions.py  backfill_cpc_patent_descriptions.py  backfill_cpc_v21_aggregator_descriptions.py  backfill_cpc_v21_descriptions.py  backfill_esco_descriptions.py  backfill_icd10_pcs_aggregator_descriptions.py  backfill_icd10_pcs_descriptions.py  backfill_icd10cm_descriptions.py  backfill_icd11_api_descriptions.py  backfill_icd11_chapters_blocks.py  backfill_icd11_descriptions.py  backfill_iscedf2013_descriptions.py  backfill_iscedf_cascade.py  backfill_isco08_descriptions.py  backfill_isic_descriptions.py  backfill_isic_mirror_cascade.py  backfill_iso3166_1_descriptions.py  backfill_iso3166_2_descriptions.py  backfill_llm_descriptions.py  backfill_llm_verified.py  backfill_loinc_descriptions.py  backfill_mesh_descriptions.py  backfill_nace_descriptions.py  backfill_nace_group_descriptions.py  (+42 more)
skills/: README.md
(+2534 files in other folders)
